# kimera

./: CMakeLists.txt
docker/: Dockerfile  kimera_vio_docker.bash
examples/: KimeraVIO.cpp
include/kimera-vio/backend/: CMakeLists.txt  VioBackendParams.h
include/kimera-vio/common/: vio_types.h
include/kimera-vio/dataprovider/: CMakeLists.txt  DataProviderInterface.h
include/kimera-vio/frontend/: CMakeLists.txt  CameraParams.h  Frame.h  VisionImuFrontendParams.h
include/kimera-vio/imu-frontend/: CMakeLists.txt  ImuFrontend.h  ImuFrontendParams.h
include/kimera-vio/pipeline/: CMakeLists.txt  Pipeline-definitions.h  Pipeline.h  PipelineParams.h  PipelinePayload.h
include/kimera-vio/utils/: ThreadsafeImuBuffer.h  YamlParser.h
src/frontend/: CMakeLists.txt  VisionImuFrontendParams.cpp
src/imu-frontend/: CMakeLists.txt  ImuFrontendParams.cpp
src/pipeline/: CMakeLists.txt  Pipeline-definitions.cpp  PipelineParams.cpp
